# traces

./: CMakeLists.txt  NOTICE  README.md
src/: BoundingBox.h  BulkRenderer.cpp  BulkRenderer.h  DoubleFramebuffer.cpp  DoubleFramebuffer.h  Error.h  Program.cpp  Program.h  Scenario.cpp  Scenario.h  Shader.cpp  Shader.h  ShaderSources.h  Trace.cpp  Trace.h  TraceFactory.cpp  TraceFactory.h  Utils.cpp  Utils.h  main.cpp  testMain.c  traces_render.cpp  traces_render.h
src/glfw/: Lifecycle.h  Window.cpp  Window.h
src/shaders/: texturedQuad.frag  texturedQuad.vert  trace.frag  trace.vert
